--- a/templates/bookinfo-a.yaml
+++ b/templates/bookinfo-a.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: bookinfo
     server: {{ .Values.spec.destination.server }}
   project: bookinfo
   source:
