--- a/templates/bookinfo-a.yaml
+++ b/templates/bookinfo-a.yaml
@@ -11,6 +11,6 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: bookinfo
   source:
-    path: ./
+    path: .
     repoURL: https://github.com/thiagonache/bookinfo
     targetRevision: HEAD
