--- a/bookinfo/templates/bookinfo-a.yaml
+++ b/bookinfo/templates/bookinfo-a.yaml
@@ -11,5 +11,6 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: bookinfo
   source:
-    chart: https://github.com/thiagonache/bookinfo
+    path: bookinfo
+    repoURL: https://github.com/thiagonache/bookinfo
     targetRevision: HEAD
