--- a/bookinfo/templates/bookinfo-a.yaml
+++ b/bookinfo/templates/bookinfo-a.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     namespace: bookinfo
     server: {{ .Values.spec.destination.server }}
-  project: bookinfo
+  project: default
   source:
     path: bookinfo
     repoURL: https://github.com/thiagonache/bookinfo
