--- a/bookinfo/templates/bookinfo.yaml
+++ b/bookinfo/templates/bookinfo.yaml
@@ -32,49 +32,49 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: details-{{ .Values.details.version }}
+  name: details-v1
   labels:
     app: details
     service: details
-    version: {{ .Values.details.version }}
+    version: v1
 spec:
   ports:
   - port: 9080
     name: http
   selector:
     app: details
-    version: {{ .Values.details.version }}
+    version: v1
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-details-{{ .Values.details.version }}
+  name: bookinfo-details-v1
   labels:
     account: details
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: details-{{ .Values.details.version }}
+  name: details-v1
   labels:
     app: details
-    version: {{ .Values.details.version }}
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: details
-      version: {{ .Values.details.version }}
+      version: v1
   template:
     metadata:
       labels:
         app: details
-        version: {{ .Values.details.version }}
+        version: v1
     spec:
       serviceAccountName: bookinfo-details
       containers:
       - name: details
-        image: docker.io/istio/examples-bookinfo-details-{{ .Values.details.version }}
+        image: docker.io/istio/examples-bookinfo-details-v1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
@@ -85,49 +85,49 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: ratings-{{ .Values.ratings.version }}
+  name: ratings-v1
   labels:
     app: ratings
     service: ratings
-    version: {{ .Values.ratings.version }}
+    version: v1
 spec:
   ports:
   - port: 9080
     name: http
   selector:
     app: ratings
-    version: {{ .Values.ratings.version }}
+    version: v1
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-ratings-{{ .Values.ratings.version }}
+  name: bookinfo-ratings-v1
   labels:
     account: ratings
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ratings-{{ .Values.ratings.version }}
+  name: ratings-v1
   labels:
     app: ratings
-    version: {{ .Values.ratings.version }}
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: ratings
-      version: {{ .Values.ratings.version }}
+      version: v1
   template:
     metadata:
       labels:
         app: ratings
-        version: {{ .Values.ratings.version }}
+        version: v1
     spec:
-      serviceAccountName: bookinfo-ratings-{{ .Values.ratings.version }}
+      serviceAccountName: bookinfo-ratings-v1
       containers:
       - name: ratings
-        image: docker.io/istio/examples-bookinfo-ratings-{{ .Values.ratings.version }}
+        image: docker.io/istio/examples-bookinfo-ratings-v1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
@@ -138,46 +138,46 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: reviews-{{ .Values.reviews.version }}
+  name: reviews-v1
   labels:
     app: reviews
     service: reviews
-    version: {{ .Values.reviews.version }}
+    version: v1
 spec:
   ports:
   - port: 9080
     name: http
   selector:
     app: reviews
-    version: {{ .Values.reviews.version }}
+    version: v1
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-reviews-{{ .Values.reviews.version }}
+  name: bookinfo-reviews-v1
   labels:
     account: reviews
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: reviews-{{ .Values.reviews.version }}
+  name: reviews-v1
   labels:
     app: reviews
-    version: {{ .Values.reviews.version }}
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: reviews
-      version: {{ .Values.reviews.version }}
+      version: v1
   template:
     metadata:
       labels:
         app: reviews
-        version: {{ .Values.reviews.version }}
+        version: v1
     spec:
-      serviceAccountName: bookinfo-reviews-{{ .Values.reviews.version }}
+      serviceAccountName: bookinfo-reviews-v1
       containers:
       - name: reviews
         image: docker.io/istio/examples-bookinfo-reviews-v1:1.16.1
@@ -204,49 +204,49 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: productpage-{{ .Values.productpage.version }}
+  name: productpage-v1
   labels:
     app: productpage
     service: productpage
-    version: {{ .Values.productpage.version }}
+    version: v1
 spec:
   ports:
   - port: 9080
     name: http
   selector:
     app: productpage
-    version: {{ .Values.productpage.version }}
+    version: v1
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-productpage-{{ .Values.productpage.version }}
+  name: bookinfo-productpage-v1
   labels:
     account: productpage
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: productpage-{{ .Values.productpage.version }}
+  name: productpage-v1
   labels:
     app: productpage
-    version: {{ .Values.productpage.version }}
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: productpage
-      version: {{ .Values.productpage.version }}
+      version: v1
   template:
     metadata:
       labels:
         app: productpage
-        version: {{ .Values.productpage.version }}
+        version: v1
     spec:
-      serviceAccountName: bookinfo-productpage-{{ .Values.productpage.version }}
+      serviceAccountName: bookinfo-productpage-v1
       containers:
       - name: productpage
-        image: docker.io/istio/examples-bookinfo-productpage-{{ .Values.productpage.version }}
+        image: docker.io/istio/examples-bookinfo-productpage-v1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
