fixes SA name for bookinfo details

--- a/bookinfo/templates/bookinfo.yaml
+++ b/bookinfo/templates/bookinfo.yaml
@@ -71,7 +71,7 @@ spec:
         app: details
         version: v1
     spec:
-      serviceAccountName: bookinfo-details
+      serviceAccountName: bookinfo-details-v1
       containers:
       - name: details
         image: docker.io/istio/examples-bookinfo-details-v1
